[package]
name = "coen"
version = "0.1.0"
edition = "2021"
authors = ["Madhavan Raja"]
readme = "README.md"
repository = "https://github.com/coenproject/coen"
homepage = "https://github.com/coenproject"
description = """
A RegEx-based pseudo-programmable markdown written in Rust that acts as an abstraction layer for any other language.
"""

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
regex = { version = "1" }
indexmap = { version = "1" }